--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,12 +27,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.4
   provider:
   cached_network_image:
   firebase_auth:
   flutter_svg:
-  cloud_firestore: ^0.13.6
+  cloud_firestore:
   firebase_storage:
   image_picker:
   image_cropper:
@@ -41,9 +41,9 @@ dependencies:
   firebase_messaging:
   shared_preferences:
   google_sign_in:
-  uuid: ^2.2.0
-  persistent_bottom_nav_bar: ^1.5.5
-
+  uuid:
+  persistent_bottom_nav_bar:
+  firebase_core:
 
 dev_dependencies:
   flutter_test:
@@ -62,14 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - 'assets/images/home_light.svg'
-   - 'assets/images/home_dark.svg'
-   - 'assets/images/search_light.svg'
-   - 'assets/images/search_dark.svg'
-   - 'assets/images/add.svg'
-   - 'assets/images/send.svg'
-   - 'assets/images/comment.svg'
-   - 'assets/images/facebook-logo.svg'
+   - assets/images/
   fonts:
     - family: Signatra
       fonts:
