--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_svg:
   cloud_firestore:
   firebase_storage:
+  flutter_bloc:
   image_picker:
   image_cropper:
   timeago:
@@ -44,10 +45,13 @@ dependencies:
   uuid:
   persistent_bottom_nav_bar:
   firebase_core:
+  json_annotation:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  json_serializable:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
