--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_core:
   json_annotation:
   video_player:
+  flutter_staggered_grid_view: ^0.6.1
 
 dev_dependencies:
   flutter_test:
